; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_ext2.c_grub_ext2_blockgroup.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_ext2.c_grub_ext2_blockgroup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_ext2_data = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.grub_ext2_block_group = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_ext2_data*, i32, %struct.grub_ext2_block_group*)* @grub_ext2_blockgroup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_ext2_blockgroup(%struct.grub_ext2_data* %0, i32 %1, %struct.grub_ext2_block_group* %2) #0 {
  %4 = alloca %struct.grub_ext2_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.grub_ext2_block_group*, align 8
  store %struct.grub_ext2_data* %0, %struct.grub_ext2_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.grub_ext2_block_group* %2, %struct.grub_ext2_block_group** %6, align 8
  %7 = load %struct.grub_ext2_data*, %struct.grub_ext2_data** %4, align 8
  %8 = getelementptr inbounds %struct.grub_ext2_data, %struct.grub_ext2_data* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.grub_ext2_data*, %struct.grub_ext2_data** %4, align 8
  %11 = getelementptr inbounds %struct.grub_ext2_data, %struct.grub_ext2_data* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @grub_le_to_cpu32(i32 %13)
  %15 = add nsw i32 %14, 1
  %16 = load %struct.grub_ext2_data*, %struct.grub_ext2_data** %4, align 8
  %17 = call i32 @LOG2_EXT2_BLOCK_SIZE(%struct.grub_ext2_data* %16)
  %18 = shl i32 %15, %17
  %19 = load i32, i32* %5, align 4
  %20 = sext i32 %19 to i64
  %21 = mul i64 %20, 4
  %22 = trunc i64 %21 to i32
  %23 = load %struct.grub_ext2_block_group*, %struct.grub_ext2_block_group** %6, align 8
  %24 = call i32 @grub_disk_read(i32 %9, i32 %18, i32 %22, i32 4, %struct.grub_ext2_block_group* %23)
  ret i32 %24
}

declare dso_local i32 @grub_disk_read(i32, i32, i32, i32, %struct.grub_ext2_block_group*) #1

declare dso_local i32 @grub_le_to_cpu32(i32) #1

declare dso_local i32 @LOG2_EXT2_BLOCK_SIZE(%struct.grub_ext2_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
